chore: Add concurrently lib

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "server": "json-server --watch ./src/data/db.json",
+    "server": "json-server --watch ./src/data/db.json --port 8080",
+    "dev": "concurrently \"react-scripts start\" \"json-server --watch ./src/data/db.json --port 8080\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^5.2.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.21.2",
