--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "server": "node ./server.js",
-    "dev": "concurrently \"react-scripts start\" \"json-server --watch ./src/data/db.json --port 8080\"",
+    "dev": "concurrently \"react-scripts start\" \"json-server --watch ./db.json --port 8080\"",
     "start": "npm run server",
     "build": "react-scripts build",
     "test": "react-scripts test",
